Update and rename .env.example to .env

--- a/.env
+++ b/.env
@@ -2,29 +2,29 @@ APP_NAME=OLAINDEX
 APP_ENV=production
 APP_KEY=
 APP_DEBUG=false
-APP_URL=http://localhost:8000
+APP_URL=http://top-protest-production.up.railway.app:PORT
 
 LOG_CHANNEL=daily
 
 #sqlite/mysql
-DB_CONNECTION=sqlite
-#DB_HOST=127.0.0.1
-#DB_PORT=3306
+DB_CONNECTION=MongoDB
+DB_HOST=TEbPxVuwGAcWgqGBKmCd@containers-us-west-15.railway.app
+DB_PORT=7423
 #DB_DATABASE=homestead
 #DB_USERNAME=homestead
 #DB_PASSWORD=secret
 
 # 缓存配置
 # file/memcached/redis
-CACHE_DRIVER=file
+CACHE_DRIVER=redis
 QUEUE_CONNECTION=sync
 SESSION_DRIVER=file
 SESSION_LIFETIME=120
 
 # redis配置
-REDIS_HOST=127.0.0.1
+REDIS_HOST=xM9JOYxXmG0Y73Nv6Gpa@containers-us-west-4.railway.app
 REDIS_PASSWORD=null
-REDIS_PORT=6379
+REDIS_PORT=7033
 
 
 # API 访问白名单
