--- a/.env
+++ b/.env
@@ -7,12 +7,12 @@ APP_URL=http://top-protest-production.up.railway.app:PORT
 LOG_CHANNEL=daily
 
 #sqlite/mysql
-DB_CONNECTION=MongoDB
-DB_HOST=TEbPxVuwGAcWgqGBKmCd@containers-us-west-15.railway.app
+DB_CONNECTION=mysql
+DB_HOST=containers-us-west-3.railway.app
 DB_PORT=7423
-#DB_DATABASE=homestead
-#DB_USERNAME=homestead
-#DB_PASSWORD=secret
+DB_DATABASE=railway
+DB_USERNAME=root
+DB_PASSWORD=q7pkRIzwAkfYgY3ATolo
 
 # 缓存配置
 # file/memcached/redis
@@ -22,9 +22,10 @@ SESSION_DRIVER=file
 SESSION_LIFETIME=120
 
 # redis配置
-REDIS_HOST=xM9JOYxXmG0Y73Nv6Gpa@containers-us-west-4.railway.app
-REDIS_PASSWORD=null
-REDIS_PORT=7033
+REDIS_HOST=containers-us-west-5.railway.app
+REDIS_USERNAME=default
+REDIS_PASSWORD=1BNNUBZuZvGdu6CkR8oK
+REDIS_PORT=5724
 
 
 # API 访问白名单
