--- a/.env
+++ b/.env
@@ -2,7 +2,7 @@ APP_NAME=OLAINDEX
 APP_ENV=production
 APP_KEY=
 APP_DEBUG=false
-APP_URL=http://top-protest-production.up.railway.app:$PORT
+APP_URL=0.0.0.0:$PORT
 
 LOG_CHANNEL=daily
 
