--- a/.env
+++ b/.env
@@ -8,11 +8,11 @@ LOG_CHANNEL=daily
 
 #sqlite/mysql
 DB_CONNECTION=mysql
-DB_HOST=containers-us-west-3.railway.app
-DB_PORT=7423
-DB_DATABASE=railway
-DB_USERNAME=root
-DB_PASSWORD=q7pkRIzwAkfYgY3ATolo
+DB_HOST=$MYSQLHOST
+DB_PORT=$MYSQLPORT
+DB_DATABASE=$MYSQLDATABASE
+DB_USERNAME=$MYSQLUSER
+DB_PASSWORD=$MYSQLPASSWORD
 
 # 缓存配置
 # file/memcached/redis
@@ -22,10 +22,10 @@ SESSION_DRIVER=file
 SESSION_LIFETIME=120
 
 # redis配置
-REDIS_HOST=containers-us-west-5.railway.app
-REDIS_USERNAME=default
-REDIS_PASSWORD=1BNNUBZuZvGdu6CkR8oK
-REDIS_PORT=5724
+REDIS_HOST=$REDISHOST
+REDIS_USERNAME=$REDISUSER
+REDIS_PASSWORD=$REDISPASSWORD
+REDIS_PORT=$REDISPORT
 
 
 # API 访问白名单
