--- a/.env
+++ b/.env
@@ -16,7 +16,7 @@ DB_PASSWORD=$MYSQLPASSWORD
 
 # 缓存配置
 # file/memcached/redis
-CACHE_DRIVER=redis
+CACHE_DRIVER=file
 QUEUE_CONNECTION=sync
 SESSION_DRIVER=file
 SESSION_LIFETIME=120
